--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,10 @@
 html {
+    font-family: 'Helvetica!', sans-serif;
     scroll-behavior: smooth;
-    scroll-padding-top: 70px; /* https://css-tricks.com/fixed-headers-on-page-links-and-overlapping-content-oh-my/ 
-                                fixed my problem of the fixed navbar overlapping a portion of the section*/
+    scroll-padding-top: 70px; 
   }
+/* https://css-tricks.com/fixed-headers-on-page-links-and-overlapping-content-oh-my/ fixed my problem of the fixed navbar overlapping a portion of the section*/
 
-body {
-    font-family: Helvetica!important, sans-serif;
-}
 
 /*----------Navigation----------*/
 
