Fixed padding for mobile view pricing section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,11 @@ html {
     font-size: x-large;
 }
 
+.col-lg-4 {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 /*----------Contact----------*/
 
 .contact-section {
